--- a/index.html
+++ b/index.html
@@ -76,6 +76,8 @@
                         <a href="team.html" class="dropdown-item">فريقنا</a>
                         <a href="testimonial.html" class="dropdown-item">التقييم</a>
                         <a href="404.html" class="dropdown-item">خطا 404</a>
+                        <a href="dashboard/pages/dashboard.html" class="dropdown-item">خطا 404</a>
+
                     </div>
                 </div>
                 <a href="contact.html" class="nav-item nav-link">تواصل معنا</a>
